--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -14,6 +14,7 @@
       <section class="projects-section just-in-section">
         <h2>2025:</h2>
         <ul>
+          <li><a href="https://phullstack-b6a3287adf14.herokuapp.com/project33-1/"><h3>Travel Tracker</h3></a></li>          
           <li><a href="PlayerInt"><h3>Echoes PlayInt</h3></a></li>
           <li><a href="INTM-Logo"><h3>Animated INTM Logo</h3></a></li>
           <li><a href="simon"><h3>Simon Game</h3></a></li>
